// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pager renders collectly with first page 1`] = `
<div
  className="jsx-2002780001 pager"
>
  <span
    className="jsx-2002780001 pager-item"
  />
  <span
    className="jsx-2002780001 pager-item"
  >
    1
  </span>
  <span
    className="jsx-2002780001 pager-item"
  >
    <a
      as="/archive/2"
      href="/archive/[page]"
    >
      2
    </a>
  </span>
</div>
`;

exports[`Pager renders collectly with last page 1`] = `
<div
  className="jsx-2002780001 pager"
>
  <span
    className="jsx-2002780001 pager-item"
  >
    <a
      as="/archive/5"
      href="/archive/[page]"
    >
      5
    </a>
  </span>
  <span
    className="jsx-2002780001 pager-item"
  >
    6
  </span>
  <span
    className="jsx-2002780001 pager-item"
  />
</div>
`;

exports[`Pager renders collectly with second page 1`] = `
<div
  className="jsx-2002780001 pager"
>
  <span
    className="jsx-2002780001 pager-item"
  >
    <a
      as="/archive/1"
      href="/archive/[page]"
    >
      1
    </a>
  </span>
  <span
    className="jsx-2002780001 pager-item"
  >
    2
  </span>
  <span
    className="jsx-2002780001 pager-item"
  >
    <a
      as="/archive/3"
      href="/archive/[page]"
    >
      3
    </a>
  </span>
</div>
`;
